# mcp-opsbeacon-server

./: .gitignore  README.md  pyproject.toml  test_server.py
src/mcp_opsbeacon_server/: __init__.py  __main__.py  server.py
